--- a/template.yaml
+++ b/template.yaml
@@ -23,7 +23,7 @@ Resources:
         ScheduledLambdaExecution:
           Type: Schedule
           Properties:
-            Schedule: cron(0 12 ? * SAT *) # 12:00 on Saturday
+            Schedule: cron(0 */6 ? * * *) # Every 6 hours
             Enabled: True
       Policies:
         - S3WritePolicy:
@@ -31,8 +31,32 @@ Resources:
 
   CalendarBucket:
     Type: AWS::S3::Bucket
+#    Properties:
+#      AccessControl: PublicRead
+#      WebsiteConfiguration:
+#        IndexDocument: index.html
+#        ErrorDocument: error.html
+#      PublicAccessBlockConfiguration:
+#        BlockPublicAcls: false
+#        BlockPublicPolicy: false
+#        IgnorePublicAcls: false
+#        RestrictPublicBuckets: false
 #      Policies:
 #        - SSMParameterReadPolicy:
 #            ParameterName: "PHOENIX_USER"
 #        - SSMParameterReadPolicy:
 #            ParameterName: "PHOENIX_PASS"
+
+  CalendarBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref CalendarBucket
+      PolicyDocument:
+        Id: PublicReadPolicy
+        Version: 2012-10-17
+        Statement:
+          - Sid: PublicReadForGetBucketObjects
+            Effect: Allow
+            Principal: '*'
+            Action: 's3:GetObject'
+            Resource: !Sub arn:aws:s3:::${CalendarBucket}/calendar/v1/*
