--- a/template.yaml
+++ b/template.yaml
@@ -23,7 +23,7 @@ Resources:
         ScheduledLambdaExecution:
           Type: Schedule
           Properties:
-            Schedule: cron(0 */6 ? * * *) # Every 6 hours
+            Schedule: cron(0 13 ? * * *) # 1pm every day
             Enabled: True
       Policies:
         - S3WritePolicy:
