--- a/template.yaml
+++ b/template.yaml
@@ -19,6 +19,7 @@ Resources:
       Environment:
         Variables:
           BUCKET_NAME: !Ref CalendarBucket
+          WEBSITE_BUCKET_NAME: !Ref StaticWebsiteBucket
       Events:
         ScheduledLambdaExecution:
           Type: Schedule
@@ -28,24 +29,11 @@ Resources:
       Policies:
         - S3WritePolicy:
             BucketName: !Ref CalendarBucket
+        - S3WritePolicy:
+            BucketName: !Ref StaticWebsiteBucket
 
   CalendarBucket:
     Type: AWS::S3::Bucket
-#    Properties:
-#      AccessControl: PublicRead
-#      WebsiteConfiguration:
-#        IndexDocument: index.html
-#        ErrorDocument: error.html
-#      PublicAccessBlockConfiguration:
-#        BlockPublicAcls: false
-#        BlockPublicPolicy: false
-#        IgnorePublicAcls: false
-#        RestrictPublicBuckets: false
-#      Policies:
-#        - SSMParameterReadPolicy:
-#            ParameterName: "PHOENIX_USER"
-#        - SSMParameterReadPolicy:
-#            ParameterName: "PHOENIX_PASS"
 
   CalendarBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -60,3 +48,26 @@ Resources:
             Principal: '*'
             Action: 's3:GetObject'
             Resource: !Sub arn:aws:s3:::${CalendarBucket}/calendar/v1/*
+
+  StaticWebsiteBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      WebsiteConfiguration:
+        IndexDocument: index.html
+        ErrorDocument: error.html
+
+  StaticWebsiteBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref StaticWebsiteBucket
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal: "*"
+            Action: "s3:GetObject"
+            Resource: !Sub arn:aws:s3:::${StaticWebsiteBucket}/*
+
+Outputs:
+  WebsiteURL:
+    Description: URL for the static website
+    Value: !GetAtt StaticWebsiteBucket.WebsiteURL
