--- a/build.gradle
+++ b/build.gradle
@@ -30,19 +30,9 @@ dependencies {
 
     implementation 'aws.sdk.kotlin:s3:1.4.30'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.3'
-//    implementation 'software.amazon.awssdk:s3:2.28.29'
     implementation 'org.slf4j:slf4j-nop:2.0.16'
+    implementation("org.jetbrains.kotlinx:kotlinx-html-jvm:0.8.1")
 
-//    implementation(platform(awssdk.bom))
-
-//    implementation(awssdk.services.s3)
-//    implementation(awssdk.services.dynamodb)
-//    implementation(awssdk.services.iam)
-//    implementation(awssdk.services.cloudwatch)
-//    implementation(awssdk.services.cognitoidentityprovider)
-//    implementation(awssdk.services.sns)
-//    implementation(awssdk.services.pinpoint)
-//    implementation("org.apache.logging.log4j:log4j-slf4j2-impl")
 }
 
 task buildZip(type: Zip) {
